# SenClaw

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SENCLAW.md  build.rs  package-lock.json
.github/workflows/: desktop.yml  extension.yml  hub-backend.yml
app-space-sdk/: Cargo.toml
app-space-sdk/src/: events.rs  fs.rs  lib.rs  net.rs
apps/email/: Cargo.toml  senclaw-manifest.json
apps/email/release/: senclaw-manifest.json
apps/email/release/skills/email-reporting/: SKILL.md
apps/email/release/web_dist/: index.html
apps/email/release/web_dist/assets/: index-CYFIQ9C0.css  index-DXcXn9cc.js
apps/email/src/: api.rs  db.rs  mailer.rs  main.rs  mcp.rs  models.rs  store.rs
apps/email/web/: package-lock.json  package.json
apps/email/web/src/: App.tsx  api.ts  index.css
apps/email/web/src/components/: AccountsView.tsx  ComposeModal.tsx  InboxView.tsx
apps/google-workspace-space-app/: README.md  package-lock.json  package.json
apps/playwright-browser/: package-lock.json  package.json  senclaw-manifest.json  server.js
apps/ssh-manager/: .env.example  Cargo.toml  append_sftp_tools.py  senclaw-manifest.json  sftp_test.rs  test_sftp.rs  test_stream.rs  update_mcp.py
apps/test-manager/: db.js  package-lock.json  package.json  senclaw-manifest.json  server.js
assets/builtin-personas/: browser-agent.md  code-agent.md  code-implementer.md  code-integrator.md  code-planner.md  code-reviewer.md  code-tester.md  coder-assistant.md  copywriter.md  general-assistant.md  ocr-worker.md  product-director.md  reflector.md  research-assistant.md  space-assistant.md
channel_app/: README.md  pubspec.yaml
channel_app/lib/: main.dart
channel_app/web/: index.html
docs/: ARCHITECTURE.md  CHANNEL_APP_DESIGN.md  COWORK_DESIGN.md  DAG_Team.md  DISPATCH_COWORK_FLOW_ANALYSIS.md  OPENAPI.yaml  QUICK_START.md  ZEN_CORE_MIGRATION.md  analytics-feature-design.md  auto-accept-tool-request.md  chat-agent-flow.md  clawhub-plugins-skills.md  code-editing-flow.md  code-feature-design.md  code-knowledge-graph.md  core.md  cowork-flow.md  local-gemma-mlx-runtime.md  memory-zen-core-integration.md  memory.md  mlx-rs-turboquant-native-runtime.md  notify-dispatch-flow.md  prompt-injection-security.md  senclaw-extension-design.md  skill-metadata.md  vscode-extensions-research.md  workspace-feature-design.md
docs/channel-app/: tasks.md
examples/: mlx_bench.rs  parse_raw_stream.rs  tts_roundtrip.rs  verify_think_chain.rs  whisper_bench.rs
examples/google-calendar-space-app/: README.md  next.config.mjs  package-lock.json  package.json  senclaw-manifest.json
examples/google-workspace-space-app/: README.md  next.config.mjs  package-lock.json  package.json  senclaw-manifest.json
examples/senclaw-space-sdk/: README.md  package-lock.json  package.json
examples/space-app-nextjs/: README.md  package.json  senclaw-manifest.json
hub-backend/: .dockerignore  Dockerfile  docker-compose.yml  go.mod  go.sum  test_client.go
proto/: channel_relay.proto
scripts/: dump_llm_prompt.py  mlx_bench.sh
senclaw-extension-chrome/: .gitignore  package-lock.json  package.json  tsconfig.json  wxt.config.ts
skills/agent-browser/: SKILL.md
skills/bot-channels/: SKILL.md
skills/calendar/: SKILL.md
skills/clawhub/: SKILL.md
skills/code/: SKILL.md
skills/note/: SKILL.md
skills/ocr/: SKILL.md
skills/schedule/: SKILL.md
skills/space/: SKILL.md
skills/web-research/: SKILL.md
skills/wiki/: SKILL.md
src/: config.rs  lib.rs  main.rs  proto.rs  setup.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: diagnostics.toml
src-tauri/src/: main.rs
src/agent/: agent_pool.rs  builtin_agents.rs  code_session.rs  dispatch_bridge.rs  group_queue.rs  hook_config_loader.rs  input_builder.rs  isolated_runner.rs  mod.rs  permission_bridge.rs  persona_registry.rs  send_bridge.rs  session_bridge.rs  system_prompt_builder.rs  system_prompts.rs  virtual_worker_pool.rs  workbench_bridge.rs
src/browser/: bridge.rs  crawl_engine.rs  html_compressor.rs  mod.rs  protocol.rs  tab_registry.rs  types.rs
src/channels/: app.rs  feishu.rs  feishu_client.rs  feishu_ws.rs  mod.rs  qq.rs  telegram.rs  wechat.rs
src/clawhub/: auth.rs  client.rs  lockfile.rs  mod.rs  relay_client.rs  signal.rs
src/cli/: mod.rs
src/code_engine/: agent_builder.rs  mod.rs  prompt.rs  server.rs  session.rs  system_prompt.rs
src/code_graph/: indexer.rs  mod.rs  parser.rs  query.rs  schema.rs  types.rs
src/cowork/: mod.rs  prompt.rs
src/db/: agent_todos.rs  agents.rs  bindings.rs  channels.rs  chat_events.rs  dispatch_activity.rs  embedding.rs  event_notifications.rs  groups.rs  helpers.rs  messages.rs  mod.rs  plans.rs  router_state.rs  rows.rs  scheduled_tasks.rs  schema.rs  tests.rs  tool_executions.rs  tool_rules.rs
src/gateway/: agent_manager.rs  binding_manager.rs  channel_manager.rs  command_dispatcher.rs  group_manager.rs  message_router.rs  mod.rs  trigger_checker.rs  ui_server.rs  websocket_gateway.rs
src/local_model/: audio.rs  candle_engine.rs  chat_template_openai.rs  higgs_cache.rs  higgs_registry.rs  higgs_sampling.rs  higgs_transformer.rs  higgs_turboquant.rs  higgs_utils.rs  image_input.rs  mlx_native.rs  mlx_prompt.rs  mod.rs  models.rs  runtime.rs  stream_parser.rs  thinking_parse.rs  whisper_transcribe.rs
src/marketplace/: git_sync.rs  manager.rs  mod.rs  types.rs
src/mcp/: admin_server.rs  bridge.rs  browser_server.rs  client.rs  code_graph_server.rs  code_server.rs  cognitive_server.rs  config.rs  dispatch_server.rs  external_client.rs  feishu_wiki_server.rs  helper.rs  litho_server.rs  manager.rs  memory_server.rs  mod.rs  ocr_server.rs  schedule_server.rs  send_server.rs  space_server.rs  virtual_server.rs  wiki_server.rs  workspace_server.rs
src/memory/: chunker.rs  daily_logger.rs  embedding.rs  embedding_providers.rs  manager.rs  (+7 more)
tests/: mlx_mamba2_scan.rs  mlx_mamba2_smoke.rs  mlx_qwen35_smoke.rs
web/: index.html  package-lock.json  package.json  tasks.md  vite.config.ts
(+549 files in other folders)
