[package]
name = "senclaw"
version = "0.1.1"
edition = "2021"
description = "Multi-group AI gateway built on sema-code-core"
license = "MIT"
authors = ["AIRC Sema Team"]
repository = "https://github.com/midea-ai/SemaClaw"
homepage = "https://github.com/midea-ai/SemaClaw"

[[bin]]
name = "senclaw"
path = "src/main.rs"

[lib]
name = "senclaw"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config / env
dotenvy = "0.15"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP client / server (gateway + UIServer + WebSocket)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart", "blocking"], default-features = false }
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# SQLite + vector + FTS
rusqlite = { version = "0.32", features = ["bundled"] }

# Cron
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Compression (replaces fflate)
flate2 = "1"
zip = "2"

# QR code (terminal)
qrcode = "0.14"

# UUID / random
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

# gRPC / Proto
tonic = { version = "0.12", features = ["tls", "tls-native-roots", "gzip"] }
prost = "0.13"
tokio-stream = "0.1"

# Encryption / Encoding
aes-gcm = "0.10"
base64 = "0.22"
urlencoding = "2"

# Channel adapters (Telegram has a Rust SDK; others go via REST through reqwest)
teloxide = { version = "0.13", default-features = false, features = ["ctrlc_handler", "rustls"] }

# Chinese tokenization (replaces nodejieba)
jieba-rs = "0.7"

# Home dir resolution (replaces os.homedir)
dirs = "5"

# Hex / hashing helpers (for buildModelKey, content hashing)
sha2 = "0.10"
hex = "0.4"

# Unified diff generation
similar = "2"

# Regex (query rewrite, pattern matching)
regex = "1"
glob = "0.3"
libc = "0.2.186"

# Lazy static initialization
once_cell = "1"

# Git operations for marketplace
git2 = "0.19"

# Code Knowledge Graph — AST parsing via tree-sitter
tree-sitter          = "0.25"
tree-sitter-language = "0.1"
tree-sitter-rust     = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python   = "0.25"
tree-sitter-bash     = "0.25"
tree-sitter-c        = "0.24"
tree-sitter-cpp      = "0.23"
tree-sitter-c-sharp  = "0.23"
tree-sitter-go       = "0.25"
tree-sitter-haskell  = "0.23"
tree-sitter-java     = "0.23"
tree-sitter-ruby     = "0.23"
tree-sitter-scala    = "0.26"
tree-sitter-ocaml    = "0.24"
tree-sitter-php      = "0.24"
tree-sitter-julia    = "0.23"
tree-sitter-verilog  = "1.0"
tree-sitter-agda     = "1.3"
tree-sitter-html     = "0.23"
tree-sitter-css      = "0.25"
tree-sitter-json     = "0.24"

# MCP server SDK (self-spawning subprocess architecture)
rmcp = { version = "1", features = ["transport-io"] }
schemars = "1"

# Local embedding via pure-Rust candle (no C++ runtime needed)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }

# Tokio utilities (CancellationToken for zen-core abort)
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4.5"

[build-dependencies]
tonic-build = "0.12"

[features]
# Pure-Rust local embeddings via candle (BERT/sentence-transformers, HuggingFace Hub).
# Build: cargo build --features local-embed
# Build with Apple Silicon Metal: cargo build --features local-embed-metal
local-embed = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
local-embed-metal = ["local-embed", "candle-core/metal"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
