[workspace]
members = ["app-space-sdk", "apps/ssh-manager", "apps/email", "src-tauri"]
resolver = "2"

[package]
name = "senclaw"
version = "0.1.1"
edition = "2021"
description = "Multi-group AI gateway built on sema-code-core"
license = "MIT"
authors = ["AIRC Sema Team"]
repository = "https://github.com/midea-ai/SenClaw"
homepage = "https://github.com/midea-ai/SenClaw"

[[bin]]
name = "senclaw"
path = "src/main.rs"

[lib]
name = "senclaw"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config / env
dotenvy = "0.15"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML frontmatter parsing for SKILL.md (OpenClaw-compatible metadata).
serde_yaml = "0.9"

# Errors / logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP client / server (gateway + UIServer + WebSocket)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart", "blocking"], default-features = false }
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# SQLite + vector + FTS
rusqlite = { version = "0.32", features = ["bundled"] }

# Cron
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }

# Compression (replaces fflate)
flate2 = "1"
zip = "2"

# QR code (terminal)
qrcode = "0.14"

# UUID / random
uuid = { version = "1", features = ["v4", "v5", "serde"] }
rand = "0.8"

tokio-stream = "0.1"

# Encryption / Encoding
aes-gcm = "0.10"
base64 = "0.22"
urlencoding = "2"

# Channel adapters (Telegram has a Rust SDK; others go via REST through reqwest)
teloxide = { version = "0.13", default-features = false, features = ["ctrlc_handler", "rustls"] }

# Chinese tokenization (replaces nodejieba)
jieba-rs = "0.7"

# Home dir resolution (replaces os.homedir)
dirs = "5"

# Hex / hashing helpers (for buildModelKey, content hashing)
sha2 = "0.10"
hex = "0.4"

# Unified diff generation
similar = "2"

# Regex (query rewrite, pattern matching)
regex = "1"
glob = "0.3"
libc = "0.2.186"

# Lazy static initialization
once_cell = "1"

# Git operations for marketplace
git2 = "0.19"

# Code Knowledge Graph — AST parsing via tree-sitter
tree-sitter          = "0.25"
tree-sitter-language = "0.1"
tree-sitter-rust     = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python   = "0.25"
tree-sitter-bash     = "0.25"
tree-sitter-c        = "0.24"
tree-sitter-cpp      = "0.23"
tree-sitter-c-sharp  = "0.23"
tree-sitter-go       = "0.25"
tree-sitter-haskell  = "0.23"
tree-sitter-java     = "0.23"
tree-sitter-ruby     = "0.23"
tree-sitter-scala    = "0.26"
tree-sitter-ocaml    = "0.24"
tree-sitter-php      = "0.24"
tree-sitter-julia    = "0.23"
tree-sitter-verilog  = "1.0"
tree-sitter-agda     = "1.3"
tree-sitter-html     = "0.23"
tree-sitter-css      = "0.25"
tree-sitter-json     = "0.24"

# MCP server SDK (self-spawning subprocess architecture)
rmcp = { version = "1", features = ["transport-io"] }
schemars = "1"

# Local embedding via pure-Rust candle (no C++ runtime needed)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }

# Tokio utilities (CancellationToken for zen-core abort)
tokio-util = { version = "0.7", features = ["rt"] }

minijinja = { version = "2", optional = true, features = ["serde"] }
minijinja-contrib = { version = "2", optional = true, features = ["pycompat"] }

# App Space & SSH Dependencies
russh = "0.44.1"
russh-keys = "0.44.0"

# Native MLX inference on Apple Silicon (feature-gated; macOS-only build).
half = { version = "2.4", optional = true }
safetensors = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true }

# Enable via: cargo build --features local-mlx
# ML stack: **mlx-rs** only from [oxiglade/mlx-rs](https://github.com/oxiglade/mlx-rs)
# (aligned with upstream oxideai tag v0.25.3). Qwen3 + chat-template helpers live
# vendored under `src/local_model/mlx_lm*` — see oxiglade examples/mistral (mlx-rs-only)
# vs examples/lm (mlx-lm).
mlx-rs = { git = "https://github.com/oxiglade/mlx-rs", tag = "v0.25.3", features = ["metal", "accelerate"], optional = true }
# Same revision as mlx-rs — direct read of MLX allocator (`mlx_get_active_memory`, etc.).
mlx-sys = { git = "https://github.com/oxiglade/mlx-rs", tag = "v0.25.3", package = "mlx-sys", optional = true }
turboquant-rs = { version = "0.4.1", optional = true }

# Whisper-family ASR audio front-end (pure-Rust, CPU). Decode any common
# container/codec → mono f32 → resample 16 kHz → log-mel spectrogram.
# Enable via the `whisper-audio` feature (no MLX/Metal required, fully testable).
symphonia = { version = "0.5", optional = true, features = ["mp3", "aac", "isomp4", "alac", "flac", "wav", "ogg", "vorbis", "pcm", "adpcm"] }
rubato = { version = "0.15", optional = true }
realfft = { version = "3.5", optional = true }

# Image preprocessing for Gemma-4 vision input (decode → RGB → 224×224
# BICUBIC resize → rescale [0,1] → CHW float32). Pulled in by the
# `local-mlx` feature — there's no reason to load images in a build that
# can't run the Gemma-4 model that consumes them.
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }

# Pure-Rust OCR via PaddleOCR (PP-OCRv4/v5) on MNN inference backend.
# Enable via the `ocr-paddle` feature. macOS Metal/CoreML acceleration available
# via the additive `ocr-paddle-metal` feature. Off by default — pulls C++ MNN
# toolchain (cmake/clang) which we don't want in the default build.
ocr-rs = { git = "https://github.com/zibo-chen/rust-paddle-ocr.git", branch = "next", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4.5"

[features]
# Pure-Rust local embeddings via candle (BERT/sentence-transformers, HuggingFace Hub).
# Build: cargo build --features local-embed
# Build with Apple Silicon Metal: cargo build --features local-embed-metal
local-embed = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
local-embed-metal = ["local-embed", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

# Cognitive-layer MLX-native embedder (Apple Silicon, mlx-rs).
# Token-embedding-table mean-pooled (Model2Vec / static-bge style). Loads
# `model.safetensors` + `tokenizer.json` from `~/.senclaw/models/<name>/`.
# Build: cargo build --features cognitive-mlx-embed
cognitive-mlx-embed = ["dep:mlx-rs", "dep:mlx-sys", "dep:tokenizers", "dep:safetensors", "dep:half", "dep:bytemuck"]

# Native LLM inference via candle (cross-platform: CPU + optional Metal on Apple Silicon).
# Build: cargo build --features local-candle
# Build with Apple Silicon Metal: cargo build --features local-candle-metal
local-candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:minijinja",
    "dep:minijinja-contrib",
]
local-candle-metal = ["local-candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
# Apple Accelerate BLAS path: forces CPU device + F32 dtype so cblas_sgemm is used.
# On M4 Pro, Accelerate SGEMV (M=1 decode) reaches ~70% of CPU memory bandwidth
# (~48 GB/s effective), yielding ~45 tok/s vs ~7 tok/s with Metal's BM=32 GEMM
# that wastes 97% of GPU threads when seq_len=1.
# Build: cargo build --release --features local-candle-accelerate
local-candle-accelerate = ["local-candle", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

# Native LLM inference via mlx-rs on Apple Silicon. Includes ConcatKeyValueCache path.
# Build: cargo build --features local-mlx
local-mlx = [
    "dep:mlx-rs",
    "dep:mlx-sys",
    "dep:turboquant-rs",
    "dep:tokenizers",
    "dep:minijinja",
    "dep:minijinja-contrib",
    "dep:half",
    "dep:safetensors",
    # Gemma-4 vision input: image decoding + preprocessing always available
    # whenever the MLX model layer is. Vision tower (Phase 2) lives in the
    # same module tree under `mlx_lm/models/gemma4_vision.rs`.
    "dep:image",
]

# Pure-Rust audio front-end for Whisper ASR (decode + resample + log-mel).
# Standalone & cross-platform so the preprocessing math is unit-testable
# without compiling the MLX stack: cargo test --features whisper-audio
whisper-audio = ["dep:symphonia", "dep:rubato", "dep:realfft"]

# Full native Whisper ASR on Apple Silicon: audio front-end + MLX encoder/decoder.
# Build: cargo build --features local-mlx-whisper
local-mlx-whisper = ["local-mlx", "whisper-audio"]

# Native ZipVoice flow-matching TTS on Apple Silicon (in progress). Brings the
# MLX stack plus the pure-Rust audio front-end (prompt-wav features + Vocos mel
# I/O). Foundation modules (config/tokenizer/weights/scaling) are unit-tested;
# the pure-Rust config/tokenizer/weight-index tests need no feature flag.
# Build: cargo build --features local-mlx-tts
local-mlx-tts = ["local-mlx", "whisper-audio"]

# Pure-Rust OCR via PaddleOCR + MNN backend (cross-platform; CPU by default).
# Build: cargo build --features ocr-paddle
# The `image` crate is reused for decoding PNG/JPEG/WebP/BMP/GIF inputs.
ocr-paddle = ["dep:ocr-rs", "dep:image"]

# Additive: enable Metal + CoreML acceleration on macOS/iOS for OCR.
# Build (macOS): cargo build --features ocr-paddle-metal
ocr-paddle-metal = ["ocr-paddle", "ocr-rs/metal", "ocr-rs/coreml"]

# NOTE — Gemma-4 vision input does NOT have its own feature flag. Image
# decoding (the `image` crate) and the vision-side modules
# (`mlx_lm::models::gemma4_vision`) are bundled into `local-mlx` so a build
# that supports the Gemma-4 model also supports its image input. This keeps
# the feature surface to just {default, local-mlx} for the user.

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Optimize ALL dependencies even in the dev (debug) profile.
#
# The native MLX path (gated-delta sequential scan) is host-*dispatch*-bound:
# the bottleneck is constructing the MLX op graph that feeds the GPU, not the
# GPU kernels themselves. With unoptimized deps the mlx-rs / mlx-sys Rust glue
# can't dispatch fast enough and the GPU starves (high CPU%, low GPU%). A debug
# build was ~3.5–5× slower on Qwen3.5 prefill purely from this.
#
# Dependencies are compiled once and cached, so this does NOT slow iterative
# rebuilds of the `senclaw` crate. For the hot loop in our own crate
# (`src/local_model/mlx_lm/models/gated_delta.rs`) prefer `make run-release`;
# this override recovers most of the gap for everyday `make run`.
[profile.dev.package."*"]
opt-level = 3
# NOTE: optimizing the `senclaw` crate itself in dev (`[profile.dev.package.senclaw]
# opt-level = 2`) was measured to give only partial MLX gains (warm prefill ~121
# vs release's ~406 tok/s — release wins via the `lto=thin` + `codegen-units=1`
# cross-crate inlining of the tiny per-op calls) while making every `make run`
# rebuild ~2 min. Not worth it: use `make run-release` for native-MLX work.
